[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://NominatimTestPanel.gd" id="1_4h4yb"]
[ext_resource type="Script" path="res://src/nominatim/NominatimClient.gd" id="3_1ex42"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0f27g"]
bg_color = Color(1, 1, 1, 0.12549)

[node name="Nominatim" type="VBoxContainer"]
offset_right = 1084.0
offset_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4h4yb")

[node name="QueryContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="ResourceLabel" type="Label" parent="QueryContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Resource:"

[node name="ResourceValueLabel" type="RichTextLabel" parent="QueryContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "(null)"

[node name="AutoQueryCheckButton" type="CheckButton" parent="QueryContainer"]
layout_mode = 2
button_pressed = true
text = "Auto"

[node name="URLLabel" type="Label" parent="QueryContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "URL:"

[node name="URLValueLabel" type="RichTextLabel" parent="QueryContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
fit_content = true
selection_enabled = true

[node name="QueryButton" type="Button" parent="QueryContainer"]
layout_mode = 2
text = "Query"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ResultContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ResultItemsContainer" type="VBoxContainer" parent="ResultContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResultLabel" type="RichTextLabel" parent="ResultContainer/ResultItemsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_0f27g")
bbcode_enabled = true
fit_content = true
selection_enabled = true
deselect_on_focus_loss_enabled = false

[node name="ResultSeparator" type="HSeparator" parent="ResultContainer/ResultItemsContainer"]
visible = false
layout_mode = 2

[node name="NominatimClient" type="HTTPRequest" parent="."]
script = ExtResource("3_1ex42")

[connection signal="toggled" from="QueryContainer/AutoQueryCheckButton" to="." method="_on_auto_query_check_button_toggled"]
[connection signal="pressed" from="QueryContainer/QueryButton" to="." method="_on_query_button_pressed"]
[connection signal="query_completed" from="NominatimClient" to="." method="_on_query_completed"]
